--- a/core/frontend/sass/modules/_nav.scss
+++ b/core/frontend/sass/modules/_nav.scss
@@ -17,19 +17,24 @@
 
 .nav {
     @extend %nav;
-    margin-top: $spacing-s;
+    text-align: right;
+    margin-top: 0;
     @include small {
         margin-right: -4%;
     }
-    @include medium {
-        margin-top: 0;
-        text-align: right;
+    @include upto-medium {
+        margin-top: $spacing-s;
+        text-align: left;
     }
 }
 
 .nav__item {
     @extend %inline-block;
     margin-right: .75em;
+    @include xsmall {
+        margin-right: 1.75em;
+        margin-bottom: .5em;
+    }
     @include medium {
         margin-right: 1em;
     }
